fix(stlying): Fixes
- Fixed issues with horizontal scroll appearing for all pages

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding-left: 32px;
-    padding-right: 32px !important;
+    padding: 32px;
     font-size: 1rem;
 }
